# interview_agent

./: main.py  pyproject.toml
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/agents/: graph.py  nodes.py  prompts.py  state.py
backend/app/api/: documents.py  interviews.py  knowledge.py
backend/app/core/: config.py  errors.py
backend/app/db/: repository.py
backend/app/schemas/: document.py  interview.py  report.py
backend/app/services/: document_parser.py  embedding_provider.py  knowledge_service.py  llm_provider.py  text_splitter.py  vector_store.py
backend/docs/: workflows.md
backend/tests/: e2e_real_files.py  smoke_check.py  test.sh
front/: README.md  package-lock.json  vite.config.ts
front/src/app/: routes.ts
front/src/app/api/: client.ts  documents.ts  interviews.ts
front/src/app/components/: Layout.tsx
front/src/app/components/pages/: ChatInterview.tsx  Dashboard.tsx  History.tsx  InterviewReport.tsx  InterviewSetup.tsx  KnowledgeBase.tsx  Settings.tsx
front/src/app/data/: mockData.ts
front/src/styles/: fonts.css
